--- a/csv-to-calendar.html
+++ b/csv-to-calendar.html
@@ -36,8 +36,8 @@
     <label for='name-filter-input'>Filter by Requestable Name:</label>
     <input type='text' id='name-filter-input' placeholder='e.g., Office365' />
     <br>
-    <label for='user-filter-input'>Filter by User UHID:</label>
-    <input type='text' id='user-filter-input' placeholder='UHID' />
+    <label for='user-filter-input'>Filter by User (Mål):</label>
+    <input type='text' id='user-filter-input' placeholder='e.g., username' />
     <br>
     <label for='requestor-filter-input'>Filter by Requestor:</label>
     <input type='text' id='requestor-filter-input' placeholder='e.g., requestor name' />
@@ -47,6 +47,9 @@
     <br>
     <label for='group-filter-input'>Filter by Group Name:</label>
     <input type='text' id='group-filter-input' placeholder='e.g., group name' />
+    <br>
+    <label for='handling-filter-input'>Filter by Handling:</label>
+    <input type='text' id='handling-filter-input' placeholder='e.g., approve' />
     <br>
     <button id='filter-button'>Filter</button>
     <button id='clear-filter-button'>Clear All Filters</button>
@@ -63,6 +66,7 @@
       const requestorFilterInput = document.getElementById('requestor-filter-input');
       const moduleFilterInput = document.getElementById('module-filter-input');
       const groupFilterInput = document.getElementById('group-filter-input');
+      const handlingFilterInput = document.getElementById('handling-filter-input');
       const filterButton = document.getElementById('filter-button');
       const clearFilterButton = document.getElementById('clear-filter-button');
       const dataSourceContainer = document.getElementById('data-source-container');
@@ -122,7 +126,8 @@
                   mal: item['Mål'] || '',
                   requestorName: item.requestorName || '',
                   modul: item['Modul'] || '',
-                  groupName: item.groupName || ''
+                  groupName: item.groupName || '',
+                  handling: item.Handling || ''
               }
           };
         }).filter(Boolean);
@@ -141,6 +146,7 @@
         const requestorFilterText = requestorFilterInput.value.toLowerCase();
         const moduleFilterText = moduleFilterInput.value.toLowerCase();
         const groupFilterText = groupFilterInput.value.toLowerCase();
+        const handlingFilterText = handlingFilterInput.value.toLowerCase();
 
         calendar.getEventSources().forEach(source => source.remove());
 
@@ -150,15 +156,16 @@
           const requestorName = (event.extendedProps.requestorName || '').toLowerCase();
           const modul = (event.extendedProps.modul || '').toLowerCase();
           const groupName = (event.extendedProps.groupName || '').toLowerCase();
+          const handling = (event.extendedProps.handling || '').toLowerCase();
 
-          const groupMatch = (groupFilterText === '' || // If group filter is empty, it always matches
-                              (modul === 'groups' && groupName.includes(groupFilterText))); // Otherwise, it must be a 'Groups' module AND match the groupName
+          const groupMatch = (groupFilterText === '' || (modul === 'groups' && groupName.includes(groupFilterText)));
 
           return requestableName.includes(nameFilterText) && 
                  malUser.includes(userFilterText) && 
                  requestorName.includes(requestorFilterText) &&
                  modul.includes(moduleFilterText) &&
-                 groupMatch;
+                 groupMatch &&
+                 handling.includes(handlingFilterText);
         });
 
         calendar.addEventSource(filteredEvents);
@@ -230,10 +237,11 @@
         requestorFilterInput.value = '';
         moduleFilterInput.value = '';
         groupFilterInput.value = '';
+        handlingFilterInput.value = '';
         applyFilter();
       });
       
-      [nameFilterInput, userFilterInput, requestorFilterInput, moduleFilterInput, groupFilterInput].forEach(input => {
+      [nameFilterInput, userFilterInput, requestorFilterInput, moduleFilterInput, groupFilterInput, handlingFilterInput].forEach(input => {
         input.addEventListener('keyup', (e) => {
           if (e.key === 'Enter') applyFilter();
         });
