--- a/csv-to-calendar.html
+++ b/csv-to-calendar.html
@@ -83,8 +83,8 @@
     <label for='name-filter-input'>Filter by Requestable Name:</label>
     <input type='text' id='name-filter-input' placeholder='e.g., Office365' />
     <br>
-    <label for='user-filter-input'>Filter by User (Mål):</label>
-    <input type='text' id='user-filter-input' placeholder='e.g., username' />
+    <label for='user-filter-input'>Filter by UHID:</label>
+    <input type='text' id='user-filter-input' placeholder='UHID' />
     <br>
     <label for='requestor-filter-input'>Filter by Requestor:</label>
     <input type='text' id='requestor-filter-input' placeholder='e.g., requestor name' />
