--- a/csv-to-calendar.html
+++ b/csv-to-calendar.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset='utf-8' />
+ <title>CSV to Calendar</title>
 <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
      <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313"></script>
