list and grid view years

--- a/csv-to-calendar.html
+++ b/csv-to-calendar.html
@@ -267,7 +267,7 @@
         headerToolbar: {
           left: 'prev,next today',
           center: 'title',
-          right: 'dayGridMonth,timeGridWeek,timeGridDay,dayGridYear,listYear'
+          right: 'dayGridMonth,timeGridWeek,timeGridDay,multiMonthYear,listYear'
         },
         initialView: 'dayGridMonth',
         eventClick: function(info) {
