--- a/adv.html
+++ b/adv.html
@@ -5,6 +5,7 @@
     <title>Avansert Sporingsdemo</title>
     <!-- Inkluderer sporingsscriptet fra vår nye server -->
     <script src="https://cc.tnixt.com/adv.js" defer></script>
+    <script src="https://cc.tnixt.com/tn_ek_ClickClient.js" defer></script>
 </head>
 <body>
     <h1>Velkommen til den avanserte sporingsdemoen!</h1>
