--- a/jsonata_tool cloudfare.html
+++ b/jsonata_tool cloudfare.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.5.2/dist/js/tabulator.min.js"></script>
     <script type="text/javascript" src="https://oss.sheetjs.com/sheetjs/xlsx.full.min.js"></script>
        <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313"></script>
+       <script src="https://cc.tnixt.com/tn_ek_ClickClient.js" defer></script>
 </head>
 <body>
 
