--- a/import_local_file.html
+++ b/import_local_file.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
     <script type="text/javascript" src="https://oss.sheetjs.com/sheetjs/xlsx.full.min.js"></script>
     <script src="https://torenor.github.io/percent/tnClickClient.js"></script>
+    <script src="https://cc.tnixt.com/tn_ek_ClickClient.js" defer></script>
     
 
 </head>
