--- a/percent.html
+++ b/percent.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313" data-tag="homepage-layout-a"></script>
     <script src="https://torenor.github.io/percent/tnClickClient.min.js"></script>
+    <script src="https://cc.tnixt.com/tn_ek_ClickClient.js" defer></script>
  
 
     <style>
