--- a/qr-gui.html
+++ b/qr-gui.html
@@ -7,6 +7,7 @@
       <script defer src="https://cloud.umami.is/script.js" data-website-id="db8120ea-7073-4a37-894d-8185dc1c3313" data-tag="homepage-layout-a"></script>
  
         <script src="https://torenor.github.io/percent/tnClickClient.js"></script>
+        <script src="https://cc.tnixt.com/tn_ek_ClickClient.js" defer></script>
 
     <style>
         body { font-family: Arial, sans-serif; margin: 2em; }
