--- a/html-comp-tab.html
+++ b/html-comp-tab.html
@@ -6,7 +6,7 @@
     <title>Array Sammenligning og Markering (Tabulator)</title>
     <!-- Tailwind CSS for styling og responsivitet -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://torenor.github.io/percent/tnClickClient.js"></script>
+<script src="http://cc.tnixt.com/tn_ek_ClickClient.js"> </script>
     <style>
         /* Egendefinerte stiler for å sikre skrift og avrundede hjørner for et rent utseende */
         body {
